Bug 32397 - #userlogin is too narrow
Patch by A. D. Bergi

--- a/skins/common/commonContent.css
+++ b/skins/common/commonContent.css
@@ -120,10 +120,3 @@ img.thumbborder {
 	margin: .5em;
 	float: left;
 }
-
-#userlogin {
-	min-width: 20em;
-	max-width: 90%;
-	width: 40em;
-}
-
